syntax = "proto3";

import "src/protos/rq.proto";

package fhers;

message Ciphertext {
    repeated Rq c = 1;
    bytes seed = 2;
}

message KeySwitchingKey {
    repeated Rq c0 = 1;
    bytes seed = 2;
    uint32 size = 3;
}

message RelinearizationKey {
    KeySwitchingKey ksk = 1;
}

message GaloisKey {
    KeySwitchingKey ksk = 1;
    uint32 exponent = 2;
}

message EvaluationKey {
    RelinearizationKey rk = 1;
    repeated GaloisKey gk = 2;
}